small change in logout - moved to restaurantApplication class